# configly

./: .gitignore  CMakeLists.txt  README.md  configly.hpp
examples/: CMakeLists.txt  main.cpp
include/configly/: configly.hpp
test/: CMakeLists.txt  main_test.cpp
